Add map, setup main layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 
     "baseUrl": "./src",
     "paths": {
+      "@root/*": ["./*"],
       "@store/*": ["store/*"],
       "@common/*": ["common/*"],
       "@components/*": ["components/*"],
