--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@vitejs/plugin-react": "^1.0.7",
     "axios": "^0.25.0",
     "leaflet": "^1.9.4",
     "mobx": "^6.3.13",
     "mobx-react-lite": "^3.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.1",
     "vite": "^4.3.9"
@@ -32,8 +33,8 @@
     "@types/jest": "^29.5.2",
     "@types/leaflet": "^1.9.3",
     "@types/node": "^18.11.9",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "^18.2.7",
     "@types/supertest": "^2.0.12",
     "@types/testing-library__jest-dom": "^5.14.8",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
