--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "verify": "pnpm type && pnpm lint && pnpm test"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
