--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "5.0.0-alpha.149",
     "@mui/material": "^5.14.1",
+    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/css-utils": "^0.1.2",
+    "@vanilla-extract/dynamic": "^2.0.3",
+    "@vanilla-extract/vite-plugin": "^3.1.2",
     "@vitejs/plugin-react": "^1.0.7",
     "axios": "^0.25.0",
     "leaflet": "^1.9.4",
@@ -51,6 +56,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "jest-transform-stub": "^2.0.0",
     "nock": "^13.2.9",
     "prettier": "^3.0.0",
     "ts-jest": "^28.0.3",
